// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SelectNetworkDropdown > should change network 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-14zfvme"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value="ark.devnet"
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-4-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-4-input"
            id="downshift-4-label"
          />
          <div
            class="invisible fixed w-auto whitespace-nowrap"
          >
            ARK Devnet
            …
          </div>
          <div
            class="css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-4-menu"
                aria-labelledby="downshift-4-label"
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
                data-testid="SelectDropdown__input"
                id="downshift-4-input"
                placeholder="Select option"
                type="text"
                value="ARK Devnet"
              />
              <span
                class="pointer-events-none absolute inset-y-0 flex w-full items-center text-sm font-normal opacity-50 sm:text-base"
                data-testid="Input__suggestion"
              >
                <span
                  class="truncate"
                >
                  ARK Devnet
                </span>
              </span>
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="chevron-down-small"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-4-label"
          id="downshift-4-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetworkDropdown > should not render network option label if network is not defined 1`] = `<div />`;

exports[`SelectNetworkDropdown > should render 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-14zfvme"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-0-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-0-input"
            id="downshift-0-label"
          />
          <div
            class="css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-0-menu"
                aria-labelledby="downshift-0-label"
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                data-testid="SelectDropdown__input"
                id="downshift-0-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="chevron-down-small"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-0-label"
          id="downshift-0-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`SelectNetworkDropdown > should render with default network 1`] = `
<div>
  <div
    class="relative w-full"
    data-testid="SelectDropdown"
  >
    <div
      class="sr-only css-14zfvme"
    >
      <div
        class="relative flex h-full flex-1"
      >
        <input
          autocomplete="off"
          class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base css-1937ogs"
          data-testid="select-list__input"
          readonly=""
          tabindex="-1"
          type="text"
          value=""
        />
      </div>
    </div>
    <div
      class="w-full"
    >
      <div
        aria-expanded="false"
        aria-haspopup="listbox"
        aria-owns="downshift-2-menu"
        role="combobox"
      >
        <div>
          <label
            for="downshift-2-input"
            id="downshift-2-label"
          />
          <div
            class="css-14zfvme"
          >
            <div
              class="relative flex h-full flex-1"
            >
              <input
                aria-autocomplete="list"
                aria-controls="downshift-2-menu"
                aria-labelledby="downshift-2-label"
                autocomplete="off"
                class="no-ligatures w-full border-none !text-sm text-theme-secondary-400 dark:placeholder:text-theme-secondary-700 sm:!text-base cursor-default css-1937ogs"
                data-testid="SelectDropdown__input"
                id="downshift-2-input"
                placeholder="Select option"
                type="text"
                value=""
              />
            </div>
            <div
              class="flex items-center space-x-3 divide-x divide-theme-secondary-300 dark:divide-theme-secondary-800 text-theme-primary-300 dark:text-theme-secondary-600"
              data-testid="Input__addon-end"
            >
              <div
                class=""
              >
                <div
                  class="flex items-center"
                >
                  <div
                    class="flex items-center justify-center"
                    data-testid="SelectDropdown__caret"
                  >
                    <div
                      class="absolute inset-0 block cursor-pointer md:hidden"
                    />
                    <div
                      class="transition-transform text-theme-secondary-500 css-15txs7d"
                      height="10"
                      width="10"
                    >
                      <svg
                        id="chevron-down-small"
                        viewBox="0 0 10 10"
                        x="0"
                        xml:space="preserve"
                        xmlns="http://www.w3.org/2000/svg"
                        y="0"
                      >
                        <path
                          d="M9 3.1L5.2 6.9c-.1.1-.3.1-.4 0L1 3.1"
                          fill="none"
                          stroke="currentColor"
                          stroke-linecap="round"
                          stroke-linejoin="round"
                          stroke-width="2"
                        />
                      </svg>
                    </div>
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
        <div
          aria-labelledby="downshift-2-label"
          id="downshift-2-menu"
          role="listbox"
        />
      </div>
    </div>
  </div>
</div>
`;
